resolve stretch issue for landing hero.

--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -12,12 +12,6 @@
  align-self: flex-start;
 }
 
-
-.img-castle-town{
-    height: 250px;
-    width: max-content;
-}
-
 #login-div{
     margin-top: 2rem;
     font-size: 1.5rem;
